# kano

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  initial-specification.md
docs/: copy-deck.md
kano-backend/: .dockerignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  openapi.yaml  pyproject.toml
kano-backend/migrations/: env.py
kano-backend/migrations/versions/: 0001_initial_schema.py  0002_kano_category_standard_amoirq.py
kano-backend/scripts/: alembic_roundtrip.sh  seed_analysis_dataset.py
kano-backend/src/kano/: __init__.py  config.py  db.py  exceptions.py
kano-backend/src/kano/api/: __init__.py  analysis.py  csrf.py  errors.py  features.py  health.py  polls.py  projects.py
kano-backend/src/kano/middleware/: __init__.py  request_id.py  security.py  structured_logging.py
kano-backend/src/kano/models/: __init__.py  feature.py  poll.py  project.py  response.py  submission.py
kano-backend/tests/: conftest.py
kano-backend/tests/integration/: conftest.py  test_alembic_roundtrip.py  test_analysis_api.py  test_analysis_api_perf.py  test_analysis_query_plan.py  test_analysis_service.py  test_app_factory.py  test_cookies.py  test_cors.py  test_csrf.py  test_csrf_token_endpoint.py  test_epoch_service.py  test_features_api.py  test_health_endpoint.py  test_poll_service_submissions.py  test_poll_submit_api.py  test_polls_api.py  test_polls_public_api.py  test_problem_details.py  test_projects_api.py  test_timestamptz.py
kano-backend/tests/unit/: test_analysis_dominant.py  test_analysis_shape_rows.py  test_category_check_parity.py  test_epoch_service.py  test_kano_matrix.py  test_poll_id_deterministic.py  test_poll_schemas.py  test_project_schemas.py  test_seed_analysis_dataset.py  test_submission_model.py  test_submission_schemas.py
kano-backend/tutorials/decorators/: test_exercises.py
kano-mcp/: .env.example  README.md  TUTORIAL.md  pyproject.toml
kano-mcp/kano_mcp/: __init__.py  kano_client.py  server.py
(+294 files in other folders)
