[project]
name = "kano"
version = "0.1.0"
description = "Kano model study tool — backend API"
authors = [
    { name = "Jolan Houvenaeghel", email = "jhouvenaeghel@tixeo.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "flask (>=3.1,<4.0)",
    "flask-sqlalchemy (>=3.1,<4.0)",
    "flask-migrate (>=4.0,<5.0)",
    "flask-cors (>=5.0,<6.0)",
    "flask-wtf (>=1.2,<2.0)",
    "psycopg2-binary (>=2.9,<3.0)",
    "sqlalchemy (>=2.0,<3.0)",
    "pydantic (>=2.6,<3.0)",
    "structlog (>=24.1,<25.0)",
]

[tool.poetry]
packages = [{ include = "kano", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-flask = "^1.3"
factory-boy = "^3.3"
alembic = "^1.13"
ruff = "^0.6"
black = "^24.8"
mypy = "^1.11"
testcontainers = {version = "^4.8", extras = ["postgres"]}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
