[project]
name = "kano-mcp"
version = "0.1.0"
description = "An MCP server that lets MCP clients create and read Kano projects and features."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

# `uv run kano-mcp` launches the stdio server.
[project.scripts]
kano-mcp = "kano_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kano_mcp"]
